final comments from @kathsherratt

--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -49,7 +49,7 @@ Multi-model and multi-team ensembles have become increasingly popular as an appr
 The experience of other domains has inspired these approaches, for example, climate modelling [@IPCCreport], where ensembles of both multiple models and from multiple teams have a long history of providing forecasts that stakeholders trust.
 
 The trend towards large-scale multi-team ensemble forecasting in infectious diseases has accelerated during the COVID-19 pandemic due to a pressing need for reliable forecasts and a perception that many publicly available forecasts were low quality. Over 2020 and 2021, teams established COVID-19 Forecasting Hubs covering the US [@Cramer2022-sp], Germany and Poland [@Bracher2021-wk], and Europe [@Sherratt2022-ue] (all three including authors of this study). All of these collaborations ensembled contributions from multiple independent teams using a similar approach and have shown that their ensemble forecasts outperform most individually contributed forecasts whilst remaining generally robust to outliers in reporting.
-Both the US and European Forecast Hubs were supported and received funding from public health agencies (the Center for Disease Control (CDC) and European Center for Disease Prevention and Control (ECDC) respectively) with their forecasts being adopted into the official output from these agencies
+Both the US and European Forecast Hubs were supported and received funding from public health agencies (the Center for Disease Control (CDC) and European Center for Disease Prevention and Control (ECDC) respectively) with their forecasts being adopted into the official output from these agencies.
 
 Whilst there is robust and consistent evidence that multi-team ensemble forecasts provide reliable and performant forecasts across domains [@Reich2022-jo] they also have a range of downsides.
 The most significant is the difficulty in interpreting them. This relates both to the underlying mechanisms for the forecasts they produce and to understanding if and when their behaviour is desirable. 
@@ -62,22 +62,22 @@ There has also been limited critical feedback on the structure of forecasting en
 
 In climate forecasting [@Castelletti2012-bs; @Edwards2021-lv; @Williamson2013-qx], as well as in other fields such as astrophysics [@Vernon2014-ov], emulation approaches have been used to circumvent resource requirement issues for complex models by training a simplified model, usually, a non-parametric statistical model, to replicate the behaviour of either the entire model or sub-components.
 These approaches generally take the same inputs as the models they seek to emulate and then are trained based on the output from those models.
-In the context of epidemioloigcal models non-parametric emulation has been used to allow the rapid exploration of the parameter space of complex models that would otherwise be resource prohibative [@Iskauskas2022-fz; @Charles2022-ds].
+In the context of epidemiological models, non-parametric emulation has been used to allow the rapid exploration of the parameter space of complex models that would otherwise be resource prohibitive [@Iskauskas2022-fz; @Charles2022-ds].
 Replicating forecasts from resource intensive models may also be a promising avenue of future research. 
-However, as an approach it may be less useful for resolving some of the issues of multi-team and multi-model forecasts as it does not provide interpretability, key for stakeholder take-up, it is not clear how the methods commonly used perform out of sample, and emulating a quantile based forecast is an unadressed methodological challenge as far as we are aware.
+However, as an approach it may be less useful for resolving some of the issues of multi-team and multi-model forecasts as it does not provide interpretability, key for stakeholder take-up. Additionally, it is not clear how the methods commonly used perform out of sample, and emulating a quantile based forecast is an unaddressed methodological challenge as far as we are aware.
 
 In this work, we draw insights from ensemble forecasts produced and endorsed by the COVID-19 Forecast Hubs, as well as our forecasting work, to propose and evaluate a "surrogate" forecast model.
 This seeks to reproduce ensemble performance by mimicking its behaviour based on a minimal set of easily communicated and epidemiologically justifiable assumptions, and limited computational resources with an easily generalised implementation.
-The primary aim of this approach is to help highlight the behaviour, and potential mechanisms behind this behaviour, of ensemble forecast widely considered the gold standard for COVID-19 forecasting.
-In addition to this, we seek to provide a simple, and robust, forecasting system that others can easily reuse, perhaps where a Forecast Hub ensemble is not available, and be used as a platform for future research both into improving understanding of ensemble behaviour and increased forecast performance.
+The primary aim of this approach is to help highlight the behaviour, and potential mechanisms behind this behaviour, of ensemble forecasts widely considered the gold standard for COVID-19 forecasting.
+In addition to this, we seek to provide a simple and robust forecasting system that others can easily reuse, perhaps where a Forecast Hub ensemble is not available, and be used as a platform for future research both into improving understanding of ensemble behaviour and increased forecast performance.
 
 In order to achieve these aims, we evaluate an initial attempt at developing a surrogate model to replicate the observed behaviour of current multi-team forecast ensembles based on a set of clear assumptions.
 We submitted this model to the European Forecast Hub and here we evaluate its performance relative to the Hub ensemble.
-In this work, we first define the model and summarise its implementation, with a focus on minimal resource use and reproducibility, as a GitHub Actions workflow [@GitHubActionsAbout].  
+In this work, we first define the model and summarise its implementation, with a focus on minimal resource use and reproducibility as a GitHub Actions workflow [@GitHubActionsAbout].  
 We then evaluate its real-time performance in comparison to the European Forecast Hub ensemble by visualising forecasts, using the weighted interval score [@bracherEvaluatingEpidemicForecasts2021], a commonly used proper scoring rule, and quantifying the empirical coverage of the forecasts produced.
 We attempt to highlight settings where this model performs well as a surrogate to the ensemble forecast and areas where it performs less well.
 Finally, we summarise our findings, discuss their implications, and highlight areas where more work is needed.
-We aim for this work to highlight some of the potential implicit assumptions of current COVID-19 Forecast Hub ensembles, provide a sensible, low-resource, surrogate model in settings where large-scale collaborative forecasting efforts are not possible, and provide inspiration for forecasters looking to make principled improvements to their models.
+We aim for this work to highlight some of the potential implicit assumptions of current COVID-19 Forecast Hub ensembles, provide a sensible, low-resource, surrogate modelwhere large-scale collaborative forecasting efforts are not possible, and provide inspiration for forecasters looking to make principled improvements to their models.
 
 # Materials and Methods {-}
 
@@ -138,7 +138,7 @@ scores <- fread(here("data", "scores.csv")) |>
 
 To understand the behaviour of the Forecast Hub ensembles we need to first explore the structure of the COVID-19 Forecast Hubs [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 These collaborations share a similar design with a central team running the hub, vetting forecasts, and producing the ensemble forecast as well as teams of independent forecast contributors who design their forecast models and then use them to produce a weekly forecast that they then submit to the central hub team. 
-Each hub targets a range of metrics including test-positive reported cases, reported deaths, and hospitalisations has a specific geographic focus and asks for weekly forecasts (using epidemiological weeks i.e. Sunday to Saturday) over a time horizon of a few weeks.
+Each hub targets a range of metrics, including test-positive reported cases, reported deaths, and hospitalisations; has a specific geographic focus; and asks for weekly forecasts (using epidemiological weeks i.e. Sunday to Saturday) over a time horizon of a few weeks.
 Observed data are available and updated daily, and most submitted forecasts use this dataset, along with potentially other sources of real-time information, to produce forecasts.
 Here, we focus on reported cases and primarily on the European Forecast Hub but our observations hold, in our view, across COVID-19 Forecast Hubs and to a lesser degree targets.
 We focus on reported cases as these represent the most common forecast target for COVID-19 forecast models [@Nixon2022-zv], they are often of the most direct interest due to being a leading indicator for other metrics such as hospitalisations [@Meakin2022-hw], and they are generally the most challenging to predict [@Sherratt2022-ue].
@@ -316,9 +316,9 @@ This represents a parsimonious approach in that we encode our expectation that t
 To model potential unobserved interventions and more general changes in transmission, we include an additional growth rate modifier restricted to be between 0 and 1 that differs depending on if the growth rate is positive or negative (due to potential differing responses when cases are growing or increasing) and that acts in a multiplicative fashion (meaning that larger absolute growth rates are reduced to zero growth more rapidly).
 This reflects a simplified interpretation of how the ensemble appears to react to potential future changes by assuming a gradual return to stable incidence. 
 
-The only observation for which we do not make an adaptation is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion.
+The only observation for which we do not make an adaptation is the apparent sharpness of the ensemble compared to our prior forecasting models. Instead we make use of a negative binomial observation model allowing the inclusion of overdispersion.
 This choice is motivated by our belief that the underlying transmission process is an exponential discrete one and therefore a count error model with a log link function, where variance is linked to the mean, is a sensible choice. 
-We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the use of a generalised form of absolute error for the majority of forecast evaluations [@bracherEvaluatingEpidemicForecasts2021]. Our set of assumptions and simplifications are summarised in Table \@ref(tab:assumptions).
+We suggest that part of the reason the hub ensembles exhibit such sharpness is due to the penalisation of overprediction compared to underprediction caused by the use of a generalised form of absolute error for the majority of forecast evaluations [@bracherEvaluatingEpidemicForecasts2021]. Our set of assumptions and simplifications are summarised in Table \@ref(tab:assumptions).
 
 ```{r assumptions}
 assumptions <- data.table(
@@ -381,8 +381,9 @@ $\sigma$ has also been made weakly informative under the assumption that the pot
 
 ## Forecast evaluation {-}
 
-To standardise the magnitude of observations and forecasts across forecast locations we first normalised both weekly notified test positive cases and forecast test positive cases by the population in the forecast region scaled to be an incidence rate per 10,000 people.
-We then evaluated a subset of forecasts from the following countries Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom visually by forecast horizon (1-4 weeks) for both the ensemble and surrogate model. 
+We standardised the magnitude of observations and forecasts across forecast locations by scaling both weekly notified test positive cases and forecast test positive cases by the population in the forecast region to an incidence rate per 10,000 people.
+We then visually evaluated forecasts from a subset of locations by forecast horizon (1 and 4 weeks) on both the natural and log scales.
+The countries in this subset were Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom.
 These countries were selected to include forecasts based on different numbers and types of submitted forecast models, to be at least partially representative of the full sample of forecast locations, and to include nations for which the authors had a good understanding of local data and transmission dynamics in the study period. 
 
 We evaluate forecasts for all locations and horizons quantitatively using the absolute error (AE) of the median forecast and the weighted interval score (WIS) [@bracherEvaluatingEpidemicForecasts2021].
@@ -512,9 +513,10 @@ Versions archived on Zenodo are available [@REF] and [@REF].
 
 ##  Summary of the European COVID-19 Forecast Hub Setting {-}
 
-In our study period, incidence rates across European nations and in the UK were primarily driven by the spread of novel subvariants of concern related to the Omicron variant and changes in population susceptibility. Many countries, such as the UK, saw large BA.1 waves in January that then resulted in declining incidence rates through February (Figure \@ref(fig:vis-forecasts)).
-From late February, through to the end of May, most nations then saw another wave, typically with lower reported incidence rates, driven by BA.2. This wave was typically characterised by a lower peak than the BA.1 wave with a more gradual decrease in incidence.
-The end of our study period was characterised by the gradual take-over of the BA.4/BA.5 subvariants that again had a lower peak and lower absolute growth rates. Unlike earlier periods in the pandemic, our study period did not see the use of new non-pharmaceutical interventions (NPIs) in response to increasing COVID-19 incidence in most locations.
+In our study period, incidence rates across European nations and in the UK were primarily driven by the spread of novel subvariants of concern related to the Omicron variant and changes in population susceptibility.
+Many countries, such as the UK, saw large BA.1 waves in January that then resulted in declining incidence rates through February (Figure \@ref(fig:vis-forecasts)).
+From late February through to the end of May, most nations saw another wave driven by BA.2. This wave typically saw lower reported incidence rates, and was characterised by a lower peak than the BA.1 wave with a more gradual decrease in incidence.
+The end of our study period was dominated by the gradual take-over of the BA.4/BA.5 subvariants that again had a lower peak and lower absolute growth rates. Unlike earlier periods in the pandemic, our study period did not see the use of new non-pharmaceutical interventions (NPIs) in response to increasing COVID-19 incidence in most locations.
 In addition, ascertainment rates likely reduced over time in most locations due to reductions in routine testing, and reductions in test availability. Whilst both the reduced use of NPIs and testing generally occurred across nations our study period also marked an increase in the heterogeneity of the response to the COVID-19 pandemic with nations changing policy at different times and to different degrees.
 This is in contrast to the early COVID-19 pandemic response for which most nations took similar actions at similar times.
 
@@ -570,7 +572,7 @@ If we instead consider median relative performance (note this is not a proper sc
 This would suggest that an increasingly skewed score distribution as the forecast horizon increased is responsible for the increase in the mean relative score (Figure \@ref(fig:assemble-eval) a).
 `r relative_wis_thresholds[, better_than]` of individual surrogate forecasts scored better than the comparable ensemble forecast, `r relative_wis_thresholds[, fifty_percent]` performed within 50% of the comparable ensemble forecast, and `r relative_wis_thresholds[, more_than_100_percent]` had a more than 100% worse WIS than the comparable ensemble forecast.
 
-If we consider only the median point forecast, using the absolute error, we see that the ensemble forecast again outperformed the surrogate forecast (rAE for the surrogate compared to the ensemble `r round(overall_ae_median[model == "Surrogate", Mean] / overall_ae_median[model == "Ensemble", Mean], digits = 2)`). If we instead consider the median of the absolute error we see that the difference in performance has reduced indicating a similar skewed score distribution for point forecasts as for the whole predictive distribution (rAE `r round(overall_ae_median[model == "Surrogate", Median] / overall_ae_median[model == "Ensemble", Median], digits = 2)`). Across forecast horizons the same pattern of outperformance holds. However, the difference in relative performance was less than when the full probability distribution was accounted for with this becoming more marked as the forecast horizon increased (Figure \@ref(fig:assemble-eval) c).
+If we consider only the median point forecast, using the absolute error, we see that the ensemble forecast again outperformed the surrogate forecast (rAE for the surrogate compared to the ensemble `r round(overall_ae_median[model == "Surrogate", Mean] / overall_ae_median[model == "Ensemble", Mean], digits = 2)`). If we instead consider the median of the absolute error we see that the difference in performance has reduced indicating a similar skewed score distribution for point forecasts as for the whole predictive distribution (rAE `r round(overall_ae_median[model == "Surrogate", Median] / overall_ae_median[model == "Ensemble", Median], digits = 2)`). Across forecast horizons the same pattern of outperformance holds. However, the difference in relative performance was less than when the full probability distribution was accounted for, with this becoming more marked as the forecast horizon increased (Figure \@ref(fig:assemble-eval) c).
 
 The surrogate model's relative performance varied over time with substantially worse performance from January to March compared to later in the year across all forecast horizons based on changes in the relative score distribution and its summary statistics (Figure \@ref(fig:assemble-eval) b).
 The majority of the difference in performance appeared to be driven by a thicker right tail with this being a particular feature of forecasts at longer horizons. Forecast performance in March had a bimodal distribution at the four-week horizon with a substantial fraction of surrogate forecasts outperforming the ensemble and a substantial fraction substantially underperforming.
@@ -715,7 +717,7 @@ In comparison, the surrogate model was biased towards over prediction and this b
 ## Strengths and Weaknesses {-}
 
 Our study benefits from having been conducted using forecasts produced in real-time, rather than retrospectively, and submitted to an independent forecast research hub (though we note the overlap between authors on this study and the European Forecast Hub [@Sherratt2022-ue]).
-This means that we are not subject to hindsight bias. 
+This means that our results are not subject to hindsight bias. 
 The downside of this approach is that it was not possible to update the surrogate model over time in response to the initial evaluation or to explore other parameterisations that might be more successful of which there are likely several.
 However, as our study has been conducted with a focus on reproducibility and openness our findings can be replicated or extended by others regardless of compute availability (due to our use of GitHub actions as a compute platform which is freely available to researchers).
 An additional downside to this approach is that the hub ensemble includes forecasts from our surrogate model, increasing the similarity between the two approaches.
@@ -726,9 +728,9 @@ It is possible that if we had instead aimed to develop a forecast methodology th
 However, if we start from the view that the Forecast Hub ensemble has traits that are desirable for use by policy-makers (i.e robustness and good average performance), which can be found widely in the literature [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue], then our approach may make sense as a way of producing a "good" forecast without sacrificing interpretability.
 
 Developing forecast methodologies with limited resources is critical as whilst improving predictive performance is a key goal of short-term forecasting it is also important that forecast models be accessible as this makes it easier to iteratively improve them, and makes them more flexible when used in real-time setting [@Osthus2022-yw].
-An example of the lack of flexibility of the Forecast Hub ensemble, and its constituent models, is the ensembles response to upswings linked to variant dynamics with the growth of one variant being temporally hidden by the decline of another. 
-Rather than forecasting this ahead of time the Forecast ensembles generally only reacted to changes in the observed data indicating that variant information was not being used by forecasters.
-Unlike the Forecast Hub ensemble the surrogate model can be, and indeed has been [@Abbott2021-ly], be extended to capture this. 
+An example of the lack of flexibility of the Forecast Hub ensemble, and its constituent models, is the ensembles response to upswings linked to variant dynamics, with the growth of one variant being temporally hidden by the decline of another. 
+Rather than forecasting this ahead of time the Forecast ensembles generally only reacted to changes in the observed data indicating that variant information was not being used by most forecasters.
+Unlike the Forecast Hub ensemble the surrogate model can be, and indeed has been [@Abbott2021-ly], easily extended to capture this. 
 Other examples where additional transient information is available to forecasters can be readily thought of implying this is a general advantage of simpler methods.
 
 Our focus on replicating the performance of the hub ensemble is also useful as the surrogate model may highlight some of the emergent behaviour of the ensemble captured in our assumptions, such as auto-correlation across time points, and the growth rate tending towards zero as the forecast horizon increases.
@@ -744,18 +746,20 @@ We considered alternative methods of forecast evaluation that would be robust to
 There are no other studies in the epidemiology literature which we are aware of that attempt to develop a forecasting model based on the observed behaviour of a multi-team, multi-model ensemble.
 Few studies focus on delivering computationally feasible forecasting models in a reproducible framework backed by an openly accessible compute platform. 
 However, the US [@Cramer2022-sp], European [@Sherratt2022-ue], and Germany/Poland [@Bracher2021-wk] forecasting hubs have published a range of evaluations of forecasts submitted to their platforms and the relative performance of their ensembles. 
-In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score as done in this study). 
-The poor calibration of the forecast ensembles produced by median Hub ensembles has been noted repeatedly [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue] but little progress has been made in understanding the causes or suggesting alternatives forecasts for policymakers to use.
+In general, these studies have struggled to draw general conclusions about the structural assumptions of forecast models they consider "good" (generally they have defined this as minimising the weighted interval score, as in this study). 
+
+The poor calibration of the forecast ensembles produced by median Hub ensembles has been noted repeatedly [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue] but little progress has been made in understanding the causes or suggesting alternatives.
 Progress in understanding which structural model features lead to better infectious disease forecasts has been limited.
-The US Forecast Hub identified the top 5 performing models and noted the structural assumptions they made but couldn't directly link assumptions with performance [@Cramer2022-sp].
-They also did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions as done in this study to motivate the surrogate model or explore the performance of a forecasting model designed with these assumptions in mind.
+The US Forecast Hub identified the top 5 performing models and noted the structural assumptions they made, but couldn't directly link assumptions with performance [@Cramer2022-sp].
+They also did not extensively compare and contrast these conclusions to arrive at a set of desired forecast assumptions (as done in this study to motivate the surrogate model), or explore the performance of a forecasting model designed with these assumptions in mind.
 Similarly, the Germany and Poland forecasting hubs were able to identify forecast models that performed comparably as well as their ensemble forecasts but did not derive structural assumptions that led to this out-performance or detail explicitly what the desirable performance characteristics would be, aside from optimising the weighted interval score.
-All comparable Forecast Hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness, though this was rarely fully defined, and should be the output used by forecast consumers [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
+All comparable Forecast Hub projects found that their ensemble was often the best choice, had desirable characteristics such as robustness - though this was rarely fully defined - and should be the output used by forecast consumers [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 In general, during the study period, all projects used the same unweighted median ensemble forecast of all submissions. 
 The US [@Ray2022-zq], and European [@Sherratt2022-ue], forecasting hub also evaluated a range of other ensemble approaches, such as inverse weighted interval score weighting, unweighted ensembles of a selection of models based on recent performance, and mean ensembling.
 Work on this is still ongoing but these more complex ensembling approaches were shown to outperform the median of all submitted forecasts in many cases in the case of the US forecasting hub and did not outperform in the case of the European forecasting hub.
 No Forecast Hub has switched to these alternative ensemble designs for their operational forecast of reported cases, though the US hub has switched to a trained ensemble for death forecasts. This suggests that the hub teams do not think the evidence base is strong enough for trained ensembles to be used by forecast consumers for reported cases and hence the median of all submitted forecasts remains the community-suggested default ensemble option and a sensible target for our study. 
-Other studies have been published evaluating single forecast models in comparison to ensemble performance from the Forecast Hub but in general, these have not focussed on replicating ensemble behaviour but rather optimising the target evaluation metric. 
+
+Other studies have been published evaluating single forecast models in comparison to ensemble performance from the Forecast Hub. In general, these have not focussed on replicating ensemble behaviour but rather optimising the target evaluation metric. 
 Our previous work also highlighted the lack of calibration in an ensemble forecast from the Germany/Poland forecasting hub compared to forecasts from epidemiological models and noted the bias towards underprediction observed in the ensemble forecasts and not in our model-based forecasts [@Bosse2022-hm; @Bracher2021-wk].
 Finally, our results are potentially sensitive to the definition used to define anomalous observations (generally related to retrospective data revisions).
 Here we follow the practice of the European Forecast Hub [@EuroHub] of excluding forecasts for weeks with a data revision of more than 5% and forecasts made based on data that is subsequently revised by more than 5%.
